--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Saba",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
+    "connect-flash": "^0.1.1",
+    "connect-flash-plus": "^0.2.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
@@ -19,7 +22,9 @@
     "mongoose": "^6.0.12",
     "node-sass": "^6.0.1",
     "node-sass-middleware": "^0.11.0",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.5.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "popups": "^1.1.3"
   }
 }
